tests/paczka1/small_fuzzy/52245704.err
Error in line 5: edlE1tSX2C A613 -1,6
Error in line 12: WWzLBs A783 2,8
